// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render a disabled select 1`] = `
<div
  className="css-1swkges0 css-1m828nk"
  disabled={true}
  onSelect={[Function]}
  open={false}
  style={Object {}}
>
  <div
    className="css-onm5hg css-1swkges5"
    onClick={undefined}
  >
    <span
      className="css-16ef8bd0 css-1rchwux"
      color="navy500"
      onClick={undefined}
      size="small"
      style={Object {}}
    >
      Select…
    </span>
    <div
      className="css-1mwuavy css-1swkges1"
      open={false}
    >
      <i
        className="css-fj83eq0 css-13jt8c1"
        color="grey500"
        onClick={undefined}
        size={24}
        style={Object {}}
        title={undefined}
      >
        <svg
          aria-hidden="true"
          height={24}
          width={24}
        >
          <title>
            chevron_right
          </title>
          <use
            xlinkHref="#chevron_right"
          />
        </svg>
      </i>
    </div>
  </div>
  <div
    className="css-1eeeuuf css-1swkges3"
    onClick={[Function]}
    open={false}
  >
    <div
      className="css-wxixsf css-1swkges4"
      name="Hertfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hertfordshire
      </div>
    </div>
    <div
      className="css-wxixsf css-1swkges4"
      name="Bedfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Bedfordshire
      </div>
    </div>
    <div
      className="css-wxixsf css-1swkges4"
      name="Oxfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Oxfordshire
      </div>
    </div>
    <div
      className="css-wxixsf css-1swkges4"
      name="Hampshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hampshire
      </div>
    </div>
  </div>
</div>
`;

exports[`Select should render a readonly select 1`] = `
<div
  className="css-1swkges0 css-o8r1u8"
  disabled={false}
  onSelect={[Function]}
  open={false}
  style={Object {}}
>
  <div
    className="css-onm5hg css-1swkges5"
    onClick={undefined}
  >
    <span
      className="css-16ef8bd0 css-1rchwux"
      color="navy500"
      onClick={undefined}
      size="small"
      style={Object {}}
    >
      Select…
    </span>
    <div
      className="css-1mwuavy css-1swkges1"
      open={false}
    >
      <i
        className="css-fj83eq0 css-13jt8c1"
        color="grey500"
        onClick={undefined}
        size={24}
        style={Object {}}
        title={undefined}
      >
        <svg
          aria-hidden="true"
          height={24}
          width={24}
        >
          <title>
            chevron_right
          </title>
          <use
            xlinkHref="#chevron_right"
          />
        </svg>
      </i>
    </div>
  </div>
  <div
    className="css-1eeeuuf css-1swkges3"
    onClick={[Function]}
    open={false}
  >
    <div
      className="css-wxixsf css-1swkges4"
      name="Hertfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hertfordshire
      </div>
    </div>
    <div
      className="css-wxixsf css-1swkges4"
      name="Bedfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Bedfordshire
      </div>
    </div>
    <div
      className="css-wxixsf css-1swkges4"
      name="Oxfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Oxfordshire
      </div>
    </div>
    <div
      className="css-wxixsf css-1swkges4"
      name="Hampshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hampshire
      </div>
    </div>
  </div>
</div>
`;

exports[`Select should render shallow component ok 1`] = `
<div
  className="css-1swkges0 css-1wzgmu5"
  disabled={false}
  onSelect={[Function]}
  open={false}
  style={Object {}}
>
  <div
    className="css-onm5hg css-1swkges5"
    onClick={[Function]}
  >
    <span
      className="css-16ef8bd0 css-1bmxkxu"
      color="navy700"
      onClick={undefined}
      size="small"
      style={Object {}}
    >
      Select…
    </span>
    <div
      className="css-1mwuavy css-1swkges1"
      open={false}
    >
      <i
        className="css-fj83eq0 css-1hy8mwc"
        color="navy700"
        onClick={undefined}
        size={24}
        style={Object {}}
        title={undefined}
      >
        <svg
          aria-hidden="true"
          height={24}
          width={24}
        >
          <title>
            chevron_right
          </title>
          <use
            xlinkHref="#chevron_right"
          />
        </svg>
      </i>
    </div>
  </div>
  <div
    className="css-1eeeuuf css-1swkges3"
    onClick={[Function]}
    open={false}
  >
    <div
      className="css-wxixsf css-1swkges4"
      name="Hertfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hertfordshire
      </div>
    </div>
    <div
      className="css-wxixsf css-1swkges4"
      name="Bedfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Bedfordshire
      </div>
    </div>
    <div
      className="css-wxixsf css-1swkges4"
      name="Oxfordshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Oxfordshire
      </div>
    </div>
    <div
      className="css-wxixsf css-1swkges4"
      name="Hampshire"
      onClick={[Function]}
      selected={undefined}
    >
      <div>
        Hampshire
      </div>
    </div>
  </div>
</div>
`;
